# rot-data

./: .gitignore  AGENTS.md  INTEGRATION_COMPLETE.md  QUICKSTART.md  README.md  START_HERE.md  TASKBOARD_SUMMARY.md  TASKBOARD_USAGE.md  main.py  pyproject.toml  start_taskboard.sh
examples/: taskboard_demo.py  taskboard_example.py
rot_data/: __init__.py
rot_data/dataloader/: co3d.py  data.py  utils.py
rot_data/links/: _bak.json  co3d.json
rot_data/models/: yolo.py
rot_data/pipeline/: analyze.py  filter.py  mask.py  mask_yolo.py  merge.py  prepare_data.py  prepare_for_training.py
rot_data/taskboard/: README.md  __init__.py  manager.py  server.py
rot_data/taskboard/static/: index.html
rot_data/utils/: download.py  extract.py  logging.py  progress.py
tests/: conftest.py  test_taskboard.py
tests/models/: test_yolo.py
tests/pipeline/: test_mask.py  test_prepare_data.py
