[project]
name = "rot-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "anyio>=4.11.0",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]
