[project]
name = "rot-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "anyio>=4.11.0",
    "datasets>=4.1.1",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "rich>=14.1.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]
