[project]
name = "rot-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "anyio>=4.11.0",
    "datasets>=4.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.8.0",
    "numpy>=2.3.3",
    "opencv-python>=4.8.0",
    "pillow>=11.3.0",
    "rich>=14.1.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.204",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]
